--- a/main.html
+++ b/main.html
@@ -20,17 +20,17 @@
 		<article >
 <img height=200px src="https://images.unsplash.com/photo-1707343845208-a20c56d2c8ba?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxlZGl0b3JpYWwtZmVlZHw2fHx8ZW58MHx8fHx8">
 <h2><a target ="_blank"href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a></h2>
-<p>We can say that optimization is...</p>	
+<p class="blue">We can say that optimization is...</p>	
 </article>
 	      <article>
 		<img height=200px src="https://images.unsplash.com/photo-1707985665955-aea0b64bc8a5?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxM3x8fGVufDB8fHx8fA%3D%3D">
 	<h2><a target="_blank" href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a></h2>
-	<p>DSA or Competitive programming?</p>
+	<p class="blue">DSA or Competitive programming?</p>
 	</article>
 	        <article>
 		<img height=200px src="https://images.unsplash.com/photo-1706550037742-0e6b5d786811?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxNHx8fGVufDB8fHx8fA%3D%3D">
 		<h2><a target="_blank" href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a></h2>
-		<p>As a job seeker, you may wonder...</p>
+		<p class="blue">As a job seeker, you may wonder...</p>
 		</article>
 	 </section>
 	<script type="text/javascript" src="./script.js">
